Fre Aug  4 18:39:45 UTC 2006 / Kjell Claesson <kjell.claesson@telia.com>

 - Added PowerMan RealSmart 800 and 1000, also the PowerMan BackPro to driver.list

Tue Aug  3 21:30:45 UTC 2006 / Kjell Claesson <kjell.claesson@telia.com>

 - Changed bcmxcp driver to support 3-phase. And made some adjustment
   to bcmxcp.h for the future use.

Mon Jul 31 13:45:34 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - hotplug, hotplug-ng: modify the permissions from 660 to 664 so
   that all users can see the device(s) using lsusb

Fri Jul 28 12:48:21 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - common.ch, developers.txt, : add the upsdebug_hex() function
   for developers to be able to print hexadecimal debugging
   binary data more easilly.

Tue Jul 18 06:47:19 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - nutupsdrv.8: update the drivers list in the SEE ALSO section
 - CREDITS: minor update on the maintainer

Wed Jul 12 10:47:43 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - genericups: merge type 23 into type 22

Mon Jul 10 21:26:13 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - mge-shut: fix the duplicate test.battery.start

 - genericups: add type 23 for CyberPower 725SL (and maybe others)

   (David Kaufman) [Alioth Bug #302337]

Mon Jul 10 09:34:19 EDT 2006 / Charles Lepple <clepple@gmail.com>

 - solis.c, rhino.c: Set default language back to English. This is a separate
   commit so that you can easily revert this changeset and go back to
   Portuguese messages.

Mon Jul 10 09:15:25 EDT 2006 / Charles Lepple <clepple@gmail.com>

 - solis.c: add internal and external shutdown programming, save external
   shutdown programming to ups, support new cables and Solaris compilation

   (Silvino B. Magalhaes)

 - rhino.c: New driver for Microsol Rhino

   (Silvino B. Magalhaes)

 - drivers (svn:ignore): added rhino; sorted list of driver binaries (so that
   they are ignored during SVN checkins)

   (Charles Lepple)
